--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "intervention/image": "^2.5",
+        "kreait/firebase-php": "4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "~7.5.1",
         "laravel/tinker": "^1.0",
